# asus_rb

./: .gitignore  README.md  amr_client.py  follow_user_script.py  launch_mock_test.py  mock_api_server.py
follow_me_bot/: CMakeLists.txt  package.xml  setup.cfg  setup.py
follow_me_bot/action/: FollowUser.action
follow_me_bot/follow_me_bot/: behavior_coordinator_node.py  user_tracking_controller_node.py  user_tracking_visual_node.py
follow_me_bot/launch/: follow_me_bot.launch.py
follow_me_bot/scripts/: user_tracking_visual_node.py
src/amr_sim/: CMakeLists.txt  package.xml
src/amr_sim/launch/: amr_sim.launch.py
src/amr_sim/rviz/: amr_sim.rviz
src/follow_me_bot/launch/: follow_me_bot.launch.py  main_launch.py
src/follow_me_bot/scripts/: behavior_coordinator_node.py  user_tracking_controller_node.py
src/follow_user/: CMakeLists.txt  package.xml
src/follow_user/launch/: follow_me_bot.launch.py  follow_user.launch.py  main_launch.py
src/follow_user/scripts/: behavior_coordinator_node.py  follow_user_motion_node.py  follow_user_vision_node.py
src/follow_user/worlds/: follow_user.world
src/navigation/: CMakeLists.txt  README.md  package.xml
src/navigation/action/: Navigate.action
src/navigation/launch/: navigation.launch.py
src/navigation/scripts/: navigation_motion_node.py
src/navigation/scripts/utils/: restful_api.py
src/navigation/test/: test_navigation.py
src/perception_control_manager/: CMakeLists.txt  package.xml
src/perception_control_manager/scripts/: perception_control_manager_mock_api_server.py  perception_control_manager_node.py
src/perception_control_manager/scripts/utils/: restful_api.py
src/perception_control_manager/srv/: CreateNavigation.srv  GetActionStatus.srv
src/task_coordinator/: CMakeLists.txt  README.md  package.xml
src/task_coordinator/action/: Task.action
src/task_coordinator/launch/: low_level_packages.launch.py  task_coordinator.launch.py
src/task_coordinator/scripts/: task_client.py  task_coordinator_node.py
src/task_coordinator/test/: test_task_coordinator_client.py
